# Bibops-michelin-ensimag-aginux

./: .coverage  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  analyse_du_projet.ipynb  conftest.py  generate_gantt.py  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt
.antigravitycli/: a2f5f216-96ad-4077-895f-a186384a080c.json
.github/workflows/: ci.yml
bibops.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
chatbot_article_dataset/: chroma.sqlite3
config/thresholds/: default.yaml  permissive.yaml  strict.yaml
data/: bibops.db  tickets_bruts.csv  tickets_evalues.json
data/IN - EUX Service Line/KB0010426/: article.md
data/IN - EUX Service Line/KB0010862/: article.md
data/IN - EUX Service Line/KB0010879/: article.md
data/IN - EUX Service Line/KB0010921/: article.md
data/benchmark/: ab_llm_resultat.json  ab_llm_resultat_temp.json  ab_user_resultat.json  benchmark_copilot.json  benchmark_copilot_mcp.json  benchmark_langchain_mcp.json  benchmark_mcp.json  position_biais_resultat_temp.json  position_bias_resultat.json  tickets_evalues.json  tickets_evalues_fake.json  tickets_evalues_scores.json  tickets_scenario_1.csv
data/databases/: bibops.db
data/databases/chatbot_article_dataset/: chroma.sqlite3
data/databases/vectordb/: chroma.sqlite3
data/doc_md/: architecture_vpn.md  standard_post.md
data/fixtures/: README.md
data/inputs/: README.md
data/inputs/benchmark/: a2a_probe_suite.json  adversarial_tickets.json  statements_abtest_bibops.json  statements_factchecker_fake.json
data/kb/: knowledge_base.json
data/knowledge_base/: knowledge_base.json
data/outputs/: README.md  coverage.json
data/outputs/benchmark/: a2a_agents_report.md  a2a_agents_results.json  ab_llm_resultat.json  ab_llm_statements_result.json  ab_user_resultat.json  adversarial_convergence.json  benchmark_copilot.json  benchmark_mcp_tools.json  comparison_results.json  position_bias_resultat.json  position_bias_statements_result.json  (+4 more)
data/runtime/: README.md
data/vectordb/: chroma.sqlite3
docs/: BIBOPS_DETAILED.md  CLI_REFERENCE.md  LLMINSPECTOR_GAP_ANALYSIS.md  PRESENTATION_RACING.md  PROJECT_STRUCTURE.md  REPO_A_TO_Z_GUIDE.md  analyse_du_projet.ipynb  doc_Akram.ipynb  index.html  review_akram.md  review_ayoub.md  review_widad.md
docs/architecture/: REORGANIZATION_MAP.md
docs/lang-chatbot/: lang-agent.py
docs/notebooks/: analyse_d_AGENT_ia.ipynb  doc_Akram.ipynb  presentation_bibops.ipynb
docs/operations/: RUNNERS.md
docs/pages/: index.html
docs/presentations/: PRESENTATION_RACING.md
docs/report/: main.aux  main.bbl  main.blg  main.lof  main.lot  main.out  main.tex  main.toc  preamble.tex  references.bib
scripts/: embed_adversarial_data.py
scripts/benchmark/: ab_test_llm_statements.py  compare_a2a_agents.py  compare_architectures.py  run_core.py  run_local_kaggle_exam.py  run_mcp_tools.py  run_pipeline.py  test_biais_position_statements.py  validate_benchmark_output.py
scripts/copilot/: run_agent_mcp.py  test_api.py
scripts/dev/: build_it_vector_db.py  check_coverage_gates.py  init_sqlite.py  reorganize_repo.sh  run_mcp_server.py
scripts/racing/: run_arena.py  run_demo.py  run_hub.py
src/: __init__.py  baseSQL.py  bench_proto_1.py  halu_RAG.py  llm_professor.py  test_copilot_api.py
src/agent/: __init__.py  database.py  maestro.py  mcp_server.py  memory.py  rag.py  tools.py
src/agents/: baseSQL.py  chaine_de_pensee.py  halu_RAG.py  maestro.py  mas.py  memoire_RAG.py  memoire_courte.py  memoire_long.py  outils.py  rca_engine.py  serveur_mcp.py
src/agents_racing/: __init__.py  demo.py  graph.py  start_arena.py  state.py  supervisor.py
src/benchmark/: ab_test_llm.py  ab_test_user.py  bench_proto_1.py  benchmark.py  benchmark_langsmith.py  benchmark_mcp.py  benchmark_mcp_tools.py  benchmark_pipeline.py  core.py  mcp_tools.py  pipeline.py  test-biais-position.py  test_biais_position.py
src/bibops/: __init__.py  __main__.py
src/common/: __init__.py  chat_models.py  config.py  llm_clients.py  math_utils.py  text.py
src/eval_bank/: __init__.py  __main__.py  checks.py  cli.py
src/it_support/: __init__.py  agent_maestro.py  database.py  mcp_server.py  outils.py  rag.py  short_memory.py
src/lang-chatbot/: lang-agent.py  main.py  tools.py
src/llm_professor/: __init__.py  a2a_client.py  adversarial.py  adversarial_loop.py  agent_copilot_mcp.py  agent_langchain_mcp.py  client_mcp.py  composite_policy.py  config_evaluation.py  copilot_mcp.py  discriminator.py  eva_mg_lang.py  eva_mg_rev_proxy.py  evaluation.py  evaluation_manager.py  evaluator_registry.py  evaluer_responses.py  greenops.py  langchain_mcp.py  llm_judge.py  llm_professor.py  quality_evaluator.py  rca.py  rca_engine.py  result_schema.py  rule_engine.py  run_kaggle_exam.py  run_local_kaggle_exam.py  security_llminspector_adapter.py  security_profile.py  test_copilot_api.py
src/racing/: demo.py  experts.py  graph.py  start_arena.py  state.py  supervisor.py
tests/: conftest.py  test_1.py  test_copilot_api.py  test_maestro.py  test_memoire.py  test_outils.py
tests/_fakes/: __init__.py  fake_openai.py
tests/unit/: test_a2a_adapter.py  test_a2a_client.py  test_ab_test_llm.py  test_adapter_registry.py  test_adversarial_persistence.py  test_agent_infra.py  test_benchmark_core.py  test_chat_models.py  test_checks.py  test_common_llm_clients.py  test_common_text.py  test_composite_policy.py  test_copilot_api.py  test_evaluator_registry.py  test_greenops.py  test_it_support_adapter.py  test_llm_judge.py  test_llm_professor_judge.py  test_maestro.py  test_memoire.py  test_model_config.py  test_openai_compat_adapter.py  test_outils.py  test_probe_loader.py  test_quality_evaluator.py  test_racing_daemon_helpers.py  test_racing_engine.py  test_racing_extras.py  test_racing_nodes.py  test_racing_observer.py  test_racing_server.py  test_rag.py  test_rca.py  test_regression.py  test_report_charts.py  test_result_schema.py  test_rule_engine_v2.py  test_runners_coverage.py  test_runners_extras.py  test_security_evaluator.py  (+1 more)
(+264 files in other folders)
